Update the example applications to use the latest API changes in the `jpro-file` module